Resolved the light and dark mode issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,15 +16,21 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #232931;
   padding: 0.5rem;
   padding-bottom: 0;
 }
+#light .headero{
+  background-color:#C4DFDF;
+  color: black;
+}
+#dark .headero{ 
+  background-color: #232931;
+  color: white;
 
+}
 .logo-title {
   font-weight: 600;
   text-transform: uppercase;
-  color: #ffffff;
   font-size: 3rem;
   margin-bottom: 1rem;
   text-align: center;
@@ -41,7 +47,7 @@ header {
 }
 
 .nav-link {
-  color: #fff;
+  
   text-align: center;
   letter-spacing: 0.5px;
   font-weight: 500;
@@ -76,9 +82,15 @@ header {
 
 /* MAIN Panel CSS */
 /* Main styles */
-main {
-  background-color: #393e46;
-  color: #fff;
+
+#light .hero{
+  background-color: #D2E9E9;
+  color: black
+  
+}
+#dark .hero{
+  background-color: #393e46 ;
+  color: white;
 }
 
 .main-center {
@@ -117,7 +129,6 @@ main {
 /* Footer styles */
 
 footer {
-  background-color: #232931;
   padding: 1.5rem 2rem;
   font-family: monospace;
 }
@@ -125,8 +136,16 @@ footer {
 .footer-end {
   text-align: center;
   justify-content: center;
-  color: #fff;
   font-size: 1.2rem;
+}
+
+#light .footero{
+  background-color:#E3F4F4;
+  color: black;
+}
+#dark .footero{
+   background-color: #232931;
+  color: white;
 }
 /* ----------------------------------------------------------------------------------- */
 /* -------------Modal------------ */
@@ -257,3 +276,81 @@ footer {
 }
 
 /* tese */
+/* ----------------------------------------------------------------------------------- */
+/* Toggle switch*/
+/* The switch - the box around the slider */
+.light{
+  background-color: #D2E9E9;
+  padding: 20px;
+  color: black;
+}
+.dark{
+  background-color: #393e46 ;
+  padding-top: 10px;
+  color: white;
+  padding: 20px;
+}
+.titlemode{
+  padding-top: 10px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
